--- a/src/app/Modules/home/presentation/presentation.component.html
+++ b/src/app/Modules/home/presentation/presentation.component.html
@@ -6,7 +6,9 @@
                     <div class="slider_text">
                         <h3>{{'Greetings' | translateTo:this.languageService.getCurrentLanguage()}} <br>
                             <span>{{'Expertise' | translateTo:this.languageService.getCurrentLanguage()}}</span></h3>
-                    <a class="boxed-btn3-line pointer_link" (click)="scroll('work')">View Works</a>
+                    <a class="boxed-btn3-line pointer_link" (click)="scroll('work')">
+                        {{'View Works' | translateTo:this.languageService.getCurrentLanguage()}}
+                    </a>
                     </div>
                 </div>
                 <div class="my_img d-none d-lg-block">
