--- a/src/app/Modules/home/header/header.component.html
+++ b/src/app/Modules/home/header/header.component.html
@@ -9,7 +9,7 @@
                             <div class="main-menu d-lg-block">
                                 <nav>
                                     <ul id="navigation" [class.RTL_Menu]="this.languageService.getCurrentLanguage() == 'ar'" >
-                                        <li><a class="pointer_link" href="/home">{{'Home' | translateTo:this.languageService.getCurrentLanguage()}}</a></li>
+                                        <li><a class="pointer_link" href="https://djalilh.github.io/HATTIABDELDJALILOUSSAMA">{{'Home' | translateTo:this.languageService.getCurrentLanguage()}}</a></li>
                                         <li><a class="pointer_link" (click)="scroll('work')">{{'Work' | translateTo:this.languageService.getCurrentLanguage()}}</a></li>
                                         <li><a class="pointer_link" (click)="scroll('skills')">{{'Skills' | translateTo:this.languageService.getCurrentLanguage()}}</a></li>
                                         <li><a class="pointer_link" >{{'Languages' | translateTo:this.languageService.getCurrentLanguage()}} <i class="ti-angle-down"></i></a>
